# LangGraph-ShoppingCart-Chatbot

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  README.md  conversation debug.txt  conversation.txt  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  main.py
app/config/: __init__.py  llm_config.py
app/services/: __init__.py  catalog_service.py
data/: .gitkeep  catalog.json
graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
models/: __init__.py  cart.py  order.py  product.py
tests/: test_basic.py  test_nodes_mocked.py
utils/: prompts.py
